test/functional/failtests/assignChain.txt
SyntaxError: Unexpected token "=", expected ";"
3 |     int:j = 2;
4 |     i = j = 3;
  |           ^ (4:11)
5 | }

